--- a/src/classes/TaskTriggerTest.cls
+++ b/src/classes/TaskTriggerTest.cls
@@ -2,10 +2,17 @@
 public with sharing class TaskTriggerTest {
     
     @isTest
-    static void createTask() {
-    	
+    static void createTaskCall() {
     	Task t = new Task();
     	t.Subject = 'Test';
+        t.TaskSubtype = CadenceConstants.ACTION_TYPE_CALL;
     	insert t;
+        
+        TaskService.isCallTypeTask(t);
+        TaskService.isSmsTypeTask(t);
+        TaskService.isEmailTypeTask(t);
+        TaskService.isTaskType(t);
+        
+        TaskService.getTaskType(t);
     } 
 }
