--- a/src/classes/RuleCriterionMatcher.cls
+++ b/src/classes/RuleCriterionMatcher.cls
@@ -88,6 +88,7 @@ public with sharing class RuleCriterionMatcher {
 			//partObj.put('CadencePerformed__c', true);
 			partObj.put(nameSpace+'Cadence_Id__c', null);
 			partObj.put(nameSpace+'isActivated__c', false);
+			partObj.put(nameSpace+'EntranceCriteria_Matched_Date__c', null);
 			return partObj;
 		} 
 		return null;
