--- a/src/classes/CadenceSelector.cls
+++ b/src/classes/CadenceSelector.cls
@@ -181,7 +181,7 @@ public with sharing class CadenceSelector {
             allowedFields.add(fieldName);
         }
         
-        if(allowedFields.size() > 0){
+        if(allowedFields.size() > 0 && nameSpace != ''){
             String apiNameWithNamespace;
             for(String fld : allowedFields){
             	apiNameWithNamespace = nameSpace + fld;
