Removed  logger changes.

--- a/src/classes/Logger.cls
+++ b/src/classes/Logger.cls
@@ -9,6 +9,6 @@ public class Logger {
         }
 		*/
         Logger__c loggerInstance = new Logger__c(Title__c=title, Description__c=description);
-        insert loggerInstance;
+        //insert loggerInstance;
     }
 }
